--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -3,11 +3,11 @@ name: Notify Release
 on:
   workflow_run:
     workflows:
-      - "Build and Release AnymeX"
+      - "changelog" # Name of the triggering workflow
     types:
       - completed
   workflow_dispatch: # Allow manual triggering of this workflow
-
+  
 jobs:
   notify:
     #if: ${{ github.event.workflow_run.conclusion == 'success' }}
