--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -10,7 +10,7 @@ on:
   
 jobs:
   notify:
-    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
