--- a/.github/workflows/codefactor_badge.yml
+++ b/.github/workflows/codefactor_badge.yml
@@ -24,48 +24,48 @@ jobs:
       - name: Fetch CodeFactor Grade
         id: fetch-grade
         run: |
+          # Fetch the badge SVG data
           RESPONSE=$(curl -s 'https://www.codefactor.io/repository/github/ryanyuuki/anymex/badge')
           echo "Response from CodeFactor: $RESPONSE"
           
-          # Extract the grade using sed
-          GRADE=$(echo "$RESPONSE" | sed -n 's/.*grade-\([A-F]\).*/\1/p')
-          
+          # Extract the grade using grep (look for text in SVG containing grade)
+          GRADE=$(echo "$RESPONSE" | grep -oP '(?<=<text x="78" y="14">)[A-F](?=</text>)')
+
           if [ -z "$GRADE" ]; then
-            echo "Failed to extract CodeFactor grade. Exiting."
-            exit 1
+              echo "Failed to extract CodeFactor grade from the SVG. Exiting."
+              exit 1
           fi
           
           echo "GRADE=$GRADE" >> $GITHUB_ENV
 
-      # Step 3: Set dynamic color based on grade
-      - name: Set Dynamic Badge Color
+      # Step 3: Update the Shields.io custom badge
+      - name: Update Badge
+        id: generate-badge
         run: |
-          # Determine the badge color based on the grade
-          if [ "$GRADE" == "A" ]; then
-            COLOR="brightgreen"
-          elif [ "$GRADE" == "B" ]; then
-            COLOR="green"
-          elif [ "$GRADE" == "C" ]; then
-            COLOR="yellowgreen"
-          elif [ "$GRADE" == "D" ]; then
-            COLOR="yellow"
-          else
-            COLOR="red"
-          fi
-          
-          # Create a badge JSON with the grade and dynamic color
-          echo "{
-            \"schemaVersion\": 1,
-            \"label\": \"CodeFactor\",
-            \"message\": \"$GRADE\",
-            \"color\": \"$COLOR\"
-          }" > badges/badge.json
+          # Determine badge color based on grade
+          case "$GRADE" in
+            A) COLOR="green" ;;
+            B) COLOR="yellow" ;;
+            C) COLOR="orange" ;;
+            D|E|F) COLOR="red" ;;
+            *) COLOR="lightgrey" ;; # Default for unknown grades
+          esac
+
+          # Generate badge JSON
+          echo '{"schemaVersion":1,"label":"CodeFactor","message":"'"$GRADE"'","color":"'"$COLOR"'"}' > badge.json
 
       # Step 4: Commit the badge update to the repository
       - name: Commit Badge
         run: |
+          mv badge.json badges/badge.json
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add badges/badge.json
-          git commit -m "Update CodeFactor badge with dynamic color"
-          git push
+          
+          # Check for changes before committing
+          if git diff --quiet; then
+            echo "No changes to commit."
+          else
+            git add badges/badge.json
+            git commit -m "Update CodeFactor badge"
+            git push
+          fi
