--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: anymex
 description: "AnymeX - One Stop for anime, manga, novels"
 publish_to: "none"
-version: 2.8.4
+version: 2.8.5-alpha
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
@@ -70,6 +70,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  rename_app: ^1.6.1
+  change_app_package_name: ^1.4.0
 
 flutter:
   uses-material-design: true
