--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: anymex
 description: "AnymeX - One Stop for anime, manga, novels"
 publish_to: "none"
-version: 2.8.5-alpha
+version: 2.8.5-beta
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
