--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,6 @@ on:
       - "v*"
   workflow_dispatch:
 
-
 jobs:
   generate-changelog:
     runs-on: ubuntu-latest
@@ -56,8 +55,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Changelog
-          path: Changelog.md  # Path to your Changelog.md
-          
+          path: Changelog.md # Path to your Changelog.md
+
   build-android:
     runs-on: ubuntu-latest
     needs: generate-changelog
@@ -126,7 +125,7 @@ jobs:
           cd ..
           zip -r AnymeX-iOS-${{ github.ref_name }}.ipa Payload
           mv AnymeX-iOS-${{ github.ref_name }}.ipa ../../../
-          
+
       - name: Release iOS IPA
         uses: ncipollo/release-action@v1
         with:
@@ -145,7 +144,8 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build cmake clang mpv libgtk-3-dev libblkid-dev liblzma-dev pkg-config libmpv-dev webkit2gtk-4.1 dpkg-dev
+          sudo apt-get install -y ninja-build cmake clang mpv libgtk-3-dev libblkid-dev liblzma-dev pkg-config libmpv-dev webkit2gtk-4.1 dpkg-dev \
+            appimagekit-tools
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -157,16 +157,53 @@ jobs:
       - name: Build Linux
         run: flutter build linux --release
 
-      - name: Zip Linux Artifacts
+      - name: Create ZIP for Linux Build
         run: |
           cd build/linux/x64/release
-          cp ../../../../linuxLibs/* bundle/lib/
           zip -r ../../../../AnymeX-Linux.zip .
-      - name: Release Linux Build
+
+      - name: Create AppImage
+        run: |
+          mkdir -p AppDir/usr/bin
+          mkdir -p AppDir/usr/lib
+          cp build/linux/x64/release/bundle/* AppDir/usr/bin/
+          cp /usr/lib/x86_64-linux-gnu/libmpv.so.* AppDir/usr/lib/
+          appimagetool AppDir AnymeX.AppImage
+          mv AnymeX.AppImage build/linux/x64/release/
+
+          - name: Build .deb Package
+          run: |
+            VERSION=${{ github.ref_name }}  
+            PACKAGE_NAME="AnymeX "
+            
+            mkdir -p debian/DEBIAN
+            mkdir -p debian/usr/bin
+            mkdir -p debian/usr/share/applications
+            
+            cp -r build/linux/x64/release/bundle/* debian/usr/bin/
+            
+            # Create the control file
+            cat <<EOF > debian/DEBIAN/control
+            Package: ${PACKAGE_NAME}
+            Version: ${VERSION}
+            Section: base
+            Priority: optional
+            Architecture: amd64
+            Maintainer: Ryan Yuuki <rehank220358@gmail.com>
+            Description: Anilist Client
+            EOF
+            
+            dpkg-deb --build debian
+            mv debian.deb build/linux/x64/release/${PACKAGE_NAME}-${VERSION}.deb
+
+      - name: Release Linux Builds
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "AnymeX-Linux.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: |
+            build/linux/x64/release/AnymeX-Linux.zip
+            build/linux/x64/release/AnymeX.AppImage
+            build/linux/x64/release/AnymeX-${{ github.ref_name }}.deb  
+            token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           tag: ${{ github.ref_name }}
 
@@ -217,7 +254,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.22.3"
-          
+
       - name: Get Dependencies
         run: flutter pub get
 
