--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,45 +145,28 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y ninja-build cmake clang mpv libgtk-3-dev libblkid-dev liblzma-dev pkg-config libmpv-dev webkit2gtk-4.1 dpkg-dev
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.22.3"
 
+      - name: Replace pubspec.yaml with Desktop Version
+        run: cp pubspec_desktop.yaml pubspec.yaml
+
       - name: Get Dependencies
         run: flutter pub get
 
-      - name: Enable dart_distributor
-        run: dart pub global activate flutter_distributor
+      - name: Build Linux
+        run: flutter build linux --release
 
-      - name: Update PATH
-        run: echo 'export PATH="$PATH:$HOME/.pub-cache/bin"' >> ~/.bashrc
-
-      - name: Build .deb Package
-        run: flutter_distributor package --platform linux --targets deb
-
-      - name: Move .deb file
-        run: mv $(find dist -type f -name "AnymeX*.deb") build/linux/x64/release/AnymeX-${{ github.ref_name }}.deb
-
-      - name: Build AppImage
-        run: flutter_distributor package --platform linux --targets AppImage
-
-      - name: Move AppImage file
-        run: mv $(find dist -type f -name "AnymeX*.AppImage") build/linux/x64/release/AnymeX-${{ github.ref_name }}.AppImage
-
-      - name: Create ZIP for Linux Build
+      - name: Zip Linux Artifacts
         run: |
           cd build/linux/x64/release
           zip -r ../../../../AnymeX-Linux.zip .
-
-      - name: Release Linux Builds
+      - name: Release Linux Build
         uses: ncipollo/release-action@v1
         with:
-          artifacts: |
-            build/linux/x64/release/AnymeX-Linux.zip
-            build/linux/x64/release/AnymeX-${{ github.ref_name }}.AppImage
-            build/linux/x64/release/AnymeX-${{ github.ref_name }}.deb
+          artifacts: "AnymeX-Linux.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           tag: ${{ github.ref_name }}
