--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: anymex
-description: "A new Flutter project."
-publish_to: "none"
-version: 0.1.0
+description: "An Anilist Client"
+publish_to: "GitHub"
+version: 2.8.6
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
@@ -35,7 +35,7 @@ dependencies:
   json_path: ^0.7.4
   intl: ^0.20.1
   isar_flutter_libs:
-    git: 
+    git:
       url: https://github.com/MrLittleWhite/isar_flutter_libs.git
   riverpod_annotation: ^2.6.1
   pseudom: ^1.0.1
@@ -59,7 +59,6 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   blur: ^4.0.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,6 +67,20 @@ dev_dependencies:
   hive_generator: ^2.0.1
   rename_app: ^1.6.2
   change_app_package_name: ^1.4.0
+  inno_bundle: ^0.7.4
+  flutter_launcher_icons: ^0.14.2
+
+flutter_launcher_icons:
+  android: false
+  ios: true
+  image_path: "assets/images/logo.png"
+  windows:
+    generate: true
+    image_path: "assets/images/logo.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logo.png"
 
 flutter:
   uses-material-design: true
@@ -87,3 +100,10 @@ flutter:
     - family: Poppins-Bold
       fonts:
         - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+inno_bundle:
+  id: 8fbd47cb-d6e1-5343-a9f6-61661647c94c
+  publisher: Ryan Yuuki
+  name: AnymeX
+  version: 2.8.6
+  admin: auto
+  installer_icon: ./anymex.ico
